--- a/users/pom.xml
+++ b/users/pom.xml
@@ -74,6 +74,10 @@
 			<version>3.11.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
