--- a/users/src/main/resources/application.properties
+++ b/users/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/users
 spring.datasource.username=postgres
 spring.datasource.password=password
@@ -11,3 +10,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.application.name=users-service
+server.port=8100
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
