--- a/items/src/main/resources/application.properties
+++ b/items/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=items-service
 server.port=8083
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
