--- a/users/src/main/resources/application.properties
+++ b/users/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.show-sql=true
 spring.application.name=users-service
 server.port=8081
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
