--- a/AuctionWebApp-PNWT/users/src/main/resources/application.properties
+++ b/AuctionWebApp-PNWT/users/src/main/resources/application.properties
@@ -15,3 +15,11 @@ spring.application.name=users-service
 server.port=8081
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
+
+jwt.secret=auctionsecret
+jwt.expirationMs=5000000
+email.expirationMs=180000
+
+app.link=http://localhost:3000
+email.address=auctionappabh22@gmail.com
+email.password=zgitjtywxttsrmcw
