--- a/AuctionWebApp-PNWT/items/src/main/resources/application.properties
+++ b/AuctionWebApp-PNWT/items/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/items
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
 spring.application.name=items-service
 server.port=8083
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
