--- a/AuctionWebApp-PNWT/spring-cloud-gateway/src/main/resources/application.properties
+++ b/AuctionWebApp-PNWT/spring-cloud-gateway/src/main/resources/application.properties
@@ -1,13 +1,15 @@
-spring.application.name=api-gateway
 server.port=8762
-eureka.instance.hostname=localhost
+spring.application.name=api-gateway
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.discovery.enabled=true
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
 spring.cloud.gateway.routes[0].id=users-service
-spring.cloud.gateway.routes[0].uri=http://localhost:8081/
-spring.cloud.gateway.routes[0].predicates[0]=Path=/user/**
+spring.cloud.gateway.routes[0].uri=lb://users-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/users-service/**
 spring.cloud.gateway.routes[1].id=payments-service
-spring.cloud.gateway.routes[1].uri=http://localhost:8082/
-spring.cloud.gateway.routes[1].predicates[0]=Path=/payment/**
+spring.cloud.gateway.routes[1].uri=lb://payments-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/payments-service/**
 spring.cloud.gateway.routes[2].id=items-service
-spring.cloud.gateway.routes[2].uri=http://localhost:8083/
-spring.cloud.gateway.routes[2].predicates[0]=Path=/item/**
+spring.cloud.gateway.routes[2].uri=lb://items-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/items-service/**
