--- a/AuctionWebApp-PNWT/items/src/main/resources/application.properties
+++ b/AuctionWebApp-PNWT/items/src/main/resources/application.properties
@@ -14,4 +14,5 @@ spring.jpa.show-sql=true
 spring.application.name=items-service
 server.port=8083
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.serviceUrl.default-zone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
