--- a/AuctionWebApp-PNWT/payments/src/main/resources/application.properties
+++ b/AuctionWebApp-PNWT/payments/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=payments-service
 server.port=8082
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.serviceUrl.default-zone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
