--- a/AuctionWebApp-PNWT/spring-cloud-gateway/src/main/resources/application.properties
+++ b/AuctionWebApp-PNWT/spring-cloud-gateway/src/main/resources/application.properties
@@ -1,15 +1,18 @@
-server.port=8762
 spring.application.name=api-gateway
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.discovery.enabled=true
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+logging.level.root=INFO
+logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
+logging.level.org.springframework.cloud.gateway=TRACE
 
 spring.cloud.gateway.routes[0].id=users-service
 spring.cloud.gateway.routes[0].uri=lb://users-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/users-service/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/users/**
 spring.cloud.gateway.routes[1].id=payments-service
 spring.cloud.gateway.routes[1].uri=lb://payments-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/payments-service/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/payments/**
 spring.cloud.gateway.routes[2].id=items-service
 spring.cloud.gateway.routes[2].uri=lb://items-service
-spring.cloud.gateway.routes[2].predicates[0]=Path=/items-service/**
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/items/**
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri= http://localhost:8181/realms/spring-boot-microservices-realm
