--- a/AuctionWebApp-PNWT/users/src/main/resources/application.properties
+++ b/AuctionWebApp-PNWT/users/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.show-sql=true
 spring.application.name=users-service
 server.port=8081
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.serviceUrl.default-zone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
 
 jwt.secret=auctionsecret
