--- a/AuctionWebApp-PNWT/users/src/main/resources/application.properties
+++ b/AuctionWebApp-PNWT/users/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 spring.application.name=users-service
 server.port=8081
