--- a/AuctionWebApp-PNWT/users/pom.xml
+++ b/AuctionWebApp-PNWT/users/pom.xml
@@ -124,6 +124,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
