--- a/AuctionWebApp-PNWT/users/src/main/resources/application.properties
+++ b/AuctionWebApp-PNWT/users/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.hikari.maximumPoolSize=5
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
