--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.27.2",
 		"classnames": "^2.3.1",
+		"keycloak-js": "^21.1.1",
 		"node-sass": "^7.0.1",
 		"react": "^18.2.0",
 		"react-app-polyfill": "^3.0.0",
